2016-10-29  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (onNetworkPlay): now uses the new
	NyiDialog class.
	* src/client/NyiDialog.cpp (NyiDialog): implements the featureName
	text.
	* src/client/NyiDialog.hpp (NyiDialog): uses CeguiDialog as a base
	class.

	* src/client/CeguiDialog.cpp (#CeguiDialog): correctly destroy
	the underlying cegui window.

	* src/client/CeguiDialog.cpp (onOk): hide the dialog on event.
	* media/layouts/nyi_dialog.layout: remove background.
	* src/client/GameEngine.cpp (onNetworkPlay): create a CeguiDoalog
	instance and show it.
	* src/client/GameEngine.cpp (onExit): cegui event callback returns
	true value.
	* src/client/GameEngine.cpp (Exit_OnClick): rename to onExit().

2016-10-28  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/CeguiDialog.hpp (CeguiDialog): implement basic visibility
	thing, including show(), hide() and isVisible().

	* CMakeLists.txt (client-src): add CeguiDialog.cpp to client sources.
	* src/client/CeguiDialog.cpp (CeguiDialog): basic constructor
	implementation.
	* src/client/CeguiDialog.hpp (CeguiDialog): add basic class and members.

2016-10-27  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/nyi_dialog.layout: create a basic Not Yet Implemented
	layout file.

2016-10-26  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (windowResized): update OIS mouse metrics.
	* src/client/GameEngine.hpp (GameEngine): add windowResized declaration.

	* src/client/GameEngine.cpp (~GameEngine): now delete root.
	* src/client/GameEngine.cpp (~GameEngine): remove itself ad a
	windowEventListener.
	* src/client/GameEngine.cpp (frameRenderingQueued): check for shutdown
	or losed window before capturing OIS devices.

2016-10-25  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (run): implement the version-revision
	geometry buffer (CEGUI overlay).
	* src/client/GameEngine.hpp (GameEngine): add mVersionGeometry member
	pointer.
	* config.h.in: add VERSTRING macro.
