@@ -90,6 +90,7 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-30 dim. 01:01]--[2016-10-30 dim. 01:17] =>  0:16
      CLOCK: [2016-10-29 sam. 04:38]--[2016-10-29 sam. 04:50] =>  0:12
      CLOCK: [2016-10-29 sam. 04:00]--[2016-10-29 sam. 04:05] =>  0:05
      CLOCK: [2016-10-29 sam. 02:22]--[2016-10-29 sam. 03:55] =>  1:33
@@ -201,6 +202,9 @@
     and add this to the dialog text
   - [X] Try to use styled text to  emphasis the featurename
   - [ ] Must be tested with multiple NyiDialog at the same time
+    - [ ] We have an CEGUI::AlreadyExistsException, we must add a uniqueName
+      and create a parentWindow
+- [ ] May add a FPS CEGUI geometryBuffer
 - [ ] Try to use the 'FetteUNZFraktur' font from the CEGUI demo
 - [ ] These is (again) a segfault when cancel the Ogre3D config dialog
 - [ ] Must implement a GameState system
